--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 GH_TOKEN = "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"
-GECKO_PATHq = "./../../files/geckodriver.exe"
+GECKO_PATH = "./../../files/geckodriver.exe"
 EMAIL = "altcharan@Gmail.com"
 PASSWORD = "Charan1307"
